[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["javad-amin <javad.amin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
